--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<style>
 		@font-face {
 			font-family: "blogger-sans";
-			src: url("/library/font/BloggerSans-Medium.woff") format('woff');
+			src: url("/font/BloggerSans-Medium.woff") format('woff');
 		}
 
 		html {
@@ -19,7 +19,7 @@
 
 
 			background-color: #28333a;
-			background-image: url(/library/img/LoadingScreen.png);
+			background-image: url(/img/LoadingScreen.png);
 			background-size: contain;
 			background-position: center;
 			background-repeat: no-repeat;
